infrastructure/cilium/luke/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
spec:
  gatewayClassName: cilium
  addresses:
    - value: "${}"
  listeners:
    - name: http
      hostname: ${INGRESS_SUFFIX}
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: ${INGRESS_SUFFIX}
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: rajsingh-info-tls
