infrastructure/cilium/luke/hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
  - name: main
  hostnames:
  - "hubble${INGRESS_SUFFIX}"
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
